--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
             try {
                 // Send POST request to FastAPI backend
-                const response = await fetch("http://localhost:8000/synthesize", {
+                const response = await fetch("http://18.117.8.184:8000/synthesize", {
                     method: "POST",
                     headers: {
                         "Content-Type": "application/json",
